add markAsRequired func to openapi generator
